# bevy_procedural_track

./: Cargo.toml  Readme.md
examples/: _connect_nurbs.rs  basic.rs  connect.rs  connect2.rs  contact2.rs  custom_profile.rs  textured.rs  with_collider.rs
src/: functions.rs  lib.rs  main.rs  profile.rs  track.rs
