[package]
name = "bevy_procedural_track"
version = "0.1.0"
edition = "2024"
authors = ["xenon615"]
keywords = ["gamedev", "bevy", "procedural"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size.
[dev-dependencies]
bevy_random_loop = {git= "https://github.com/xenon615/bevy_random_loop.git"}
avian3d = "0.7.0"
# bevy_random_loop = {path= "../bevy_random_loop"}


[dev-dependencies.bevy]
version = "0.19.0"
default-features = false
features = ["3d", "free_camera", "dynamic_linking"]

[dependencies.bevy]
version = "0.19.*"
default-features = false
features = ["3d"]


# 3 closed tracks different profiles
[[example]]
name = "basic"

# one closed track with textture applied
[[example]]
name = "textured"

# custom silly triangle profile
[[example]]
name = "custom_profile"

# collider applied
[[example]]
name = "with_collider"

# contact  track with cuboid
[[example]]
name = "contact"

# contact  track to track
[[example]]
name = "contact2"
